  (Jira APPSERVER-84)
- "NetStream.Failed" is sent for exceptions during streaming methods
  (Jira APPSERVER-85)
- random server freezing resolved (Jira APPSERVER-41)
- send correct timestamps if seeking beyond end of file (Jira APPSERVER-54)
- fixed NoSuchElementException when iterating connections during disconnect
  (Jira APPSERVER-94)


Red5 0.6rc2 (2007-02-12)
------------------------
New features:
- Stream classes can be configured through red5-common.xml (Trac #223)
- RTMP network library supports client mode (Trac #94)
- source of VOD streams can be customized through IStreamFilenameGenerator
  (Trac #120)
- API: IStreamFilenameGenerator differs between playback and recording
- results of method calls can be deferred until they are available to free
  io threads
- transient fields will not be serialized any longer (Jira APPSERVER-27)
- Red5 compiles with Java6 now
- support for AMF3 incl. IExternalizable objects added (Jira APPSERVER-31)
- access to streams can be limited (Jira APPSERVER-25)
- (non-persistent) shared objects can be acquired by serverside code to
  prevent them from being released when the last client disconnects
  (Jira APPSERVER-48)

Bugfixes:
- serialize RecordSet objects (Trac #201)
- "NetConnection.Connect.Rejected" is sent for non-existing scopes to
  match result code of FCS/FMS
- RTMPT through Jetty working again (Trac #213)
- size of last frame is correctly written to .flv files
- errors during "connect" are reported back to client through RTMPT
- fixed NPE in FlowControlService thread (Trac #175)
- deserializing of mixed arrays now works in all cases (Trac #109, #195)
- "NetStream.Record.Start" and "NetStream.Record.Stop" are sent (Trac #127)
- "NetStream.Publish.BadName" is sent if two clients try to publish/record
  a stream with the same name
- streams stopped if bandwidth limit was set too high (Trac #165)
- fixed potential concurrency issue in FlowControlService (Trac #224)